--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://jiafeili.netlify.app"
 languageCode = "en-us"
 title = "Jiafei Li"
 theme = "jiafei_cactus"
