--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ weight = 4
   googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
 
   # Home page settings
-  description = "Economist in the making. R user. Based in Chicago"
+  description = "An assistant professor of economics. R user. Based in China."
   mainSections = ["posts"] # your main section
   showAllPostsOnHomePage = false # default
   postsOnHomePage = 8# this option will be ignored if showAllPostsOnHomePage is set to true
